recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:2: error: reassignment to val
	if (level=0)	{avance(length)
                 ^